--- a/PiBaristaMaster/src/main/webapp/css/menu.css
+++ b/PiBaristaMaster/src/main/webapp/css/menu.css
@@ -1,18 +1,33 @@
 /* CONFIGURAÇÕES GERAIS MENU */
-
 * {
     /*border: solid; border-width: 1px; border-color: red;*/
-    border: solid; border-width: 1px; border-color: grey;
     font-family: Lucida Sans Unicode, Lucida Grande, sans-serif;
-    font-style: normal;
+    font-style: normal;+
     font-weight: 400;
     box-sizing: 0px;
     margin: 0;
 }
 
+html {
+    display: flex;
+    flex-direction: column;
+    max-width: 1024px;
+    margin: 0 auto;
+}
+
 body {
     color: black;
-    background-color: rgba(217, 217, 217, 1);
+    background: linear-gradient(to bottom, #B6BCBD 40%, grey 100%);
+}
+
+a {
+    font-size: 14px;
+    color: black;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-decoration: none;
+    text-align: center;
+    padding: 15px 15px;
 }
 
 .tituloMenu{
@@ -24,8 +39,7 @@ body {
 }
 
 h1 {
-border: solid; border-width: 1px; border-color: red;
-    font-size: 38px;
+    font-size: 32px;
     color: black;
     font-weight: bold;
     text-align: center;
@@ -35,12 +49,13 @@ border: solid; border-width: 1px; border-color: red;
 }
 
 h2 {
-    background-color: white;
-    font-size: 28px;
+    color: white;
+    font-size: 22px;
     color: black;
     font-weight: bold;
     padding: 0px;
 }
+
 p {
     background-color: white;
     font-size: 14px;
@@ -49,8 +64,8 @@ p {
 }
 
 img {
-    max-width: 300px;
-    max-height: 300px;
+    max-width: 200px;
+    max-height: 200px;
     display: block;
     margin: 0 auto;
     overflow: hidden;
@@ -65,6 +80,7 @@ img {
     max-width: 1024px;
     height: auto;
     gap: 10px;
+    padding: 30px 0px 30px 0px;
     margin: 0 auto;
 }
 
@@ -84,8 +100,3 @@ img {
     flex: 1 1 10%;
     margin: 10px;
 }
-
-/**{
-filter: drop-shadow(10px 20px 10px rgba( 0 0 0 / 60%));
-border: solid; border-width: 1px; border-color: red;
-*/
