--- a/PiBaristaMaster/src/main/webapp/css/teste.css
+++ b/PiBaristaMaster/src/main/webapp/css/teste.css
@@ -4,7 +4,6 @@ html {
     max-width: 1024px;
     margin: 0 auto;
 }
-
 * {
     /*border: solid; border-width: 1px; border-color: red;*/
     font-family: Lucida Sans Unicode, Lucida Grande, sans-serif;
@@ -54,8 +53,10 @@ p {
 
 .containerCursosBaristaPrincipal {
     min-width: 400px;
+    min-height: auto;
     height: 100vh;
     background-image: url(../img/tela_cursos.jpg);
+    background-size: 130%;
     background-repeat: no-repeat;
     justify-content: center;
     align-content: flex-start;
@@ -63,7 +64,7 @@ p {
 
 .containerCursosBaristaPrincipal h1, h2 {
     color: white;
-    text-shadow: 1px 1px 3px rgba( 0 0 0 / 80%);
+    text-shadow: 2px 2px 3px rgba( 0 0 0 / 50%);
 }
 
 .containerLogoCursoBarista img {
@@ -77,7 +78,6 @@ p {
     height: auto;
     min-width: 400px;
     margin: 0 auto;
-    padding: 40px;
 }
 
 .containerTitulo {
