--- a/PiBaristaMaster/src/main/webapp/css/index.css
+++ b/PiBaristaMaster/src/main/webapp/css/index.css
@@ -1,5 +1,5 @@
 /* CONFIGURAÇÕES GERAIS INDEX E SITE */
-/* Atualizacoes em 20/05/2023 */
+/* Atualizacoes em 01/06/2023*/
 * {
     /*border: solid; border-width: 1px; border-color: red;*/
     font-family: Lucida Sans Unicode, Lucida Grande, sans-serif;
@@ -81,6 +81,14 @@ p {
     height: 768px;
     min-width: 400px;
     margin: 0 auto;
+}
+
+.btLogin {
+    width: 80px;
+    height: 30px;
+    text-align: center;
+    cursor: pointer;
+    float: right;
 }
 
 .imgPrincipal1 {
